# lovi

./: CMakeLists.txt  README.md
.github/workflows/: main.yml  windows.yml
ci/lib/: windows-dependencies.sh
ci/lib/cmake/: CMakeLists.txt
cmake/: DeployQt.cmake  translations.cmake
src/: CMakeLists.txt
src/core/: FileLineProvider.cpp  FilterModel.h  FilterProxyModel.cpp  FilterProxyModel.h  HighlightModel.h  LogFormat.cpp  LogFormatIO.cpp  LogModel.cpp  LogModel.h  StdinLineProvider.cpp
src/ui/: ColorWidget.cpp  ColorWidget.h  HighlightWidget.cpp  HighlightWidget.ui  ItemDelegate.cpp  LineEditChecker.cpp  LogFormatWidget.cpp  LogFormatWidget.ui  MainWindow.cpp  MainWindow.ui  WidgetFloater.cpp  lovi.qrc  main.cpp
src/ui/icons/dark/: index.theme
src/ui/icons/light/: index.theme
tests/: CMakeLists.txt  ConditionIOTest.cpp  FileLineProviderTest.cpp  JsonSettingsTest.cpp  LogFormatIOTest.cpp  LogFormatStoreTest.cpp  LogFormatTest.cpp  SearcherTest.cpp
